# furnivision-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Makefile  README.md  requirements.txt  verify_cleanup.sh
.github/workflows/: ci.yml
ai-furniture-detector/: TODO.md  detect.py  pyproject.toml
ai-furniture-detector/ai_furniture_detector/: __init__.py  api.py  cli.py  config.py  detector.py  logging_config.py  web_app.py
docs/: API.md  CONFIG.md
tests/: __init__.py  test_detector.py
